pkg/lang/syntax/testdata/ub/validate/invalid/stack/configuration-input-reference.ub
stack: {
  factory: {
    configurations: {
      aws { region: input.region }
    }
  }
  state: local {}
  encryption: noop {}
}
